--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-    background: goldenrod;
-    min-height: 50px;
+    background: silver;
+    min-height: 30px;
     font-size: 18px;
     padding: 20px 0;
     width: 100%;
