--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -1,3 +1,8 @@
 .jumbotron {
-    padding: 100px;
+    padding: 200px;
+    height: 100px;
+    background-image: url(/assets/images/wall.png);
+    margin-top: 10px;
+    color: white;
 }
+
