--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -1,8 +1,21 @@
 .jumbotron {
     padding: 200px;
-    height: 100px;
+    height: 500px;
     background-image: url(/assets/images/wall.png);
-    margin-top: 10px;
+    margin-top: 30px;
     color: white;
+    clear: "both";
+    opacity: 1.2;
+    background-size: cover;
+    overflow: hidden;
+    text-shadow: 0 1px 5px rgba(0,0,0,.1);
+    font-size: 80%;
+
 }
 
+
+
+
+/* .container{
+    color: white !important;
+} */
