--- a/src/components/ShiftDetail/style.css
+++ b/src/components/ShiftDetail/style.css
@@ -6,17 +6,6 @@ th {
 }
 
 
-/* body{
+.container{
     background-color:powerblue;
-}  */
-
-/* .container {
-        flex: 1;
-        flex-Direction: column;
-        justify-Content: space-between;
-        width: 50;
-        height: 50; 
-        background-Color: powderblue;
-        color: white !important;
-
-} */
+}  
