--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -1,6 +1,6 @@
 .jumbotron {
     padding: 200px;
-    height: 500px;
+    height: 520px;
     background-image: url(/assets/images/wall.png);
     margin-top: 30px;
     color: white;
@@ -13,5 +13,13 @@
 
 }
 
+
+.btn-secondary{
+    color: white;
+    background-color: #2196F3;
+    -webkit-transition: all 0.2s;
+    transition: all 0.2s;
+    border-color: blue;
+} 
 
 
