--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,22 +1,31 @@
 .navbar {
     background:#2196F3;
     min-height: 20px;
-    font-size: 18px;
+    font-size: 1px;
     padding: 5px 0;
     width: 100%;
     -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     color:white; 
-    z-index: 99;
-    white-space: nowrap;
+    z-index: 0;
     opacity: 1.2;
 
 }
 
 a{
 color: white;
+    z-index: 0;
+    cursor: pointer;
 }
 
+.navbar-brand {
+    display: flex;
+    align-items: center;
+}
+
+.navbar-brand>img {
+    padding: 7px 14px;
+}
 
 .nowrap {
     white-space: nowrap;
@@ -79,7 +88,7 @@ color: white;
     display: flex;
     /* position: fixed; */
     justify-content: space-around;
-    font-size: calc(10px + 14 * (100vw - 320px) / 800);
+    font-size: calc(10px + 10 * (100vw - 320px) / 800);
     }
 
     .navbar div {
@@ -89,3 +98,6 @@ color: white;
     
     }
 }
+
+
+@import 'https://fonts.googleapis.com/css?family=Raleway';
