Testing possible features to add.

--- a/src/components/SearchBar/style.css
+++ b/src/components/SearchBar/style.css
@@ -1,4 +1,4 @@
-div.row{
+/* div.row{
     background-color:salmon;
     color:black;
 }
@@ -21,7 +21,7 @@ div.col-md-6{
     margin-top: -33px;
     
 
-}
+} */
 
 /* .container{
     border: solid;
