--- a/src/components/Jumbotron/style.css
+++ b/src/components/Jumbotron/style.css
@@ -9,7 +9,7 @@
     background-size: cover;
     overflow: hidden;
     text-shadow: 0 1px 5px rgba(0,0,0,.1);
-    font-size: 80%;
+    font-size: 60%;
 
 }
 
@@ -20,6 +20,40 @@
     -webkit-transition: all 0.2s;
     transition: all 0.2s;
     border-color: blue;
+    border-radius: 8px;
 } 
 
 
+.btn-secondary:hover{
+    border-top-color: #28597a;
+    background: #28597a;
+    color: #ccc;
+}
+
+.btn-secondary:active {
+    border-top-color: #1b435e;
+    background: #1b435e;
+}
+
+
+.display-4 {
+overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+}
