Added POST functions for employees & shifts

--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,7 +1,7 @@
 
 .Profile {
 
-    background-color: orange;
+    background-color: #ff9800;
     min-height: 100%;
     min-height: 100vh;
     display: flex;
