--- a/src/components/SearchBar/style.css
+++ b/src/components/SearchBar/style.css
@@ -36,3 +36,8 @@ div.col-md-6{
     padding-right: 10px;
     display: block;
 }  */
+
+/* div{
+    background-color:var(--yellow);
+    background-image: url('/img/background.jpg');
+} */
