--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -28,3 +28,9 @@ background{
 .shake {
     animation: shaker 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
+
+.Logo {
+background-image: url("https://img.freepik.com/free-vector/circle-letter-s-logo_65373-31.jpg?size=338&ext=jpg");
+}
+
+
