--- a/src/pages/LoginPage/Login.css
+++ b/src/pages/LoginPage/Login.css
@@ -1,5 +1,5 @@
 .LoginPage {
-    background-color: rgb(152, 230, 255);
+    background-color:var(--yellow);
     background-image: url('/img/background.jpg');
     min-height: 100%;
     min-height: 100vh;
@@ -8,3 +8,11 @@
     align-items: center;
     justify-content: center;
 }
+
+/* h2, .h2 {
+    font-size: 1.620rem;
+    float: right;
+    color:red;
+    border: solid;
+    
+} */
