--- a/src/pages/LoginPage/Login.css
+++ b/src/pages/LoginPage/Login.css
@@ -9,10 +9,10 @@
     justify-content: center;
 }
 
-/* h2, .h2 {
-    font-size: 1.620rem;
-    float: right;
-    color:red;
-    border: solid;
-    
-} */
+.messageheader {
+
+    color: white;
+    text-align: center;
+    margin-bottom: 12em;
+    /* margin-left: 5em; */
+}
